# readme-roast

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: tests.yml
docs/: project-copy.md  release-v0.1.0.md  release-v0.1.1.md
src/readme_roast/: __init__.py  cli.py  models.py  render.py  scanner.py
tests/: test_cli.py  test_render.py  test_scanner.py
