[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "readme-roast"
version = "0.1.0"
description = "Roast README drift or report it strictly."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Yang Lei", email = "yanglei711@gmail.com" }
]
keywords = ["readme", "cli", "markdown", "repository", "docs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Documentation",
    "Topic :: Utilities"
]

[project.scripts]
readme-roast = "readme_roast.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

